--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "vue": "^3.2.41"
   },
   "devDependencies": {
-    "@iconify/vue": "^4.0.1",
+    "@iconify-json/mdi": "^1.1.49",
     "@kovsu/eslint-config-vue": "^0.1.0",
+    "@unocss/preset-attributify": "^0.50.4",
+    "@unocss/preset-icons": "^0.50.4",
+    "@unocss/preset-uno": "^0.50.4",
+    "@unocss/vite": "^0.50.4",
     "@vitejs/plugin-vue": "^3.2.0",
+    "@vueuse/core": "^9.13.0",
     "eslint": "^8.35.0",
     "typescript": "^4.6.4",
+    "unocss": "^0.50.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
   },
